# baxter_eeg_tests

./: CMakeLists.txt  package.xml
launch/: eeg.launch  eeg_binary.launch  eeg_feedback.launch  eeg_feedback_secondary.launch  test_timing.launch
scripts/: error_magnitude.py  feedback_control.py  feedback_control_binary.py  feedback_control_secondary.py  keyboard_input.py  main_control.py  test_timing.py
